--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,7 @@
 {
   "version": 2,
+  "buildCommand": "cd client && npm install --legacy-peer-deps && npm run build",
+  "installCommand": "cd server && npm install --legacy-peer-deps",
   "builds": [
     {
       "src": "client/package.json",
