--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.17",
     "@mui/material": "^5.14.17",
+    "ajv": "^6.12.6",
     "axios": "^1.6.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
