--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "data-center-news-rfps",
   "version": "1.0.0",
   "private": true,
+  "engines": {
+    "node": "18.x"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "cd client && npm install --legacy-peer-deps && DISABLE_ESLINT_PLUGIN=true npm run build",
