--- a/client/package.json
+++ b/client/package.json
@@ -34,5 +34,9 @@
     "@typescript-eslint/parser": "^6.10.0",
     "eslint-config-react-app": "^7.0.1",
     "typescript": "^5.2.2"
+  },
+  "resolutions": {
+    "ajv": "^6.12.6",
+    "ajv-keywords": "^3.5.2"
   }
 }
